docs: Agregando la documentacion de la API del CRUD de comentarios
