# src/swagger-output.json
@@ -532,10 +532,14 @@
     },
     "/comentarios/": {
       "get": {
+        "tags": [
+          "Comentarios"
+        ],
+        "summary": "Obtener todos los comentarios del sistema",
         "description": "",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Comentarios retornadas exitosamente."
           },
           "500": {
             "description": "Internal Server Error"
@@ -543,19 +547,40 @@
         }
       },
       "post": {
+        "tags": [
+          "Comentarios"
+        ],
+        "summary": "Crea un nuevo comentario en el sistema",
         "description": "",
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Comentario creado exitosamente."
+          },
+          "400": {
+            "description": "El body no cumple con los requisitos."
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ComentarioNuevo"
+              }
+            }
           }
         }
       }
     },
     "/comentarios/{id}": {
       "get": {
+        "tags": [
+          "Comentarios"
+        ],
+        "summary": "Obtiene los detalles de un comentario por su ID",
         "description": "",
         "parameters": [
           {
@@ -564,15 +589,16 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "ID cadena de texto del comentario a buscar"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Comentario encontrado exitosamente."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Comentario no encontrado."
           },
           "500": {
             "description": "Internal Server Error"
@@ -580,6 +606,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Comentarios"
+        ],
+        "summary": "Editar los datos de un comentario por su ID",
         "description": "",
         "parameters": [
           {
@@ -588,22 +618,40 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "ID cadena de texto del comentario a buscar"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Comentario modificado con exito."
+          },
+          "400": {
+            "description": "El body no cumple con los requisitos."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Comentario encontrado en la base de datos."
           },
           "500": {
             "description": "Internal Server Error"
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ComentarioNuevo"
+              }
+            }
+          }
         }
       },
       "delete": {
+        "tags": [
+          "Comentarios"
+        ],
+        "summary": "Elimina un comentario del sistema por su id",
         "description": "",
         "parameters": [
           {
@@ -612,15 +660,16 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "ID cadena de texto del comentario a eliminar"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Comentario eliminado exitosamente."
           },
           "404": {
-            "description": "Not Found"
+            "description": "Comentario no encontrado."
           },
           "500": {
             "description": "Internal Server Error"
@@ -674,6 +723,23 @@
         "required": [
           "user_nickname",
           "text"
+        ]
+      },
+      "ComentarioNuevo": {
+        "type": "object",
+        "properties": {
+          "text": {
+            "type": "string",
+            "example": "Este es un comentario"
+          },
+          "is_visible": {
+            "type": "boolean",
+            "example": true
+          }
+        },
+        "required": [
+          "text",
+          "is_visible"
         ]
       }
     }
